chore: add archecture parameter in terraform module
